--- a/DOCUMENTOS/3. PROCESO DE DESARROLLO/1. DESCRIPCIÓN DEL PROCESO.md
+++ b/DOCUMENTOS/3. PROCESO DE DESARROLLO/1. DESCRIPCIÓN DEL PROCESO.md
@@ -1,6 +1,6 @@
 ## DESCRIPCIÓN DEL PROCESO
 ### MÉTODO DE TRABAJO:
-La metodología ágil de trabajo que utilizamos fue Scrum debido a que es la que mejor se adapta al ritmo de trabajo del equipo y a la naturaleza del proyecto que estamos trabajando.
+La metodología ágil de trabajo que utilizamos fue Scrum debido a que es la que mejor se adapta al ritmo de trabajo del equipo y a la naturaleza del proyecto que estamos trabajando. 
 
 ### DESCRIPCIÓN:
 Como equipo decidimos que al inicio del proyecto tendríamos una reunión específica para determinar la metodología de trabajo, así como los roles que cada uno llevaría a cabo y las actividades asignadas, las cuales cambiarían durante cada reunión acordando nuevas tareas para realizar. Dichas reuniones se llevarían a cabo en la plataforma Microsoft Teams y la calendarización así como el monitoreo se llevó a cabo en Notion. 
@@ -50,4 +50,4 @@ A continuación, se muestra una tabla que contiene las distintas actividades a r
 <img src="https://i.imgur.com/X4mI0h7.png" title="source: imgur.com" />
 <img src="https://i.imgur.com/RscjOun.png" title="source: imgur.com" />
 
-[Archivo Word](https://alumnosuady-my.sharepoint.com/:w:/g/personal/a20215708_alumnos_uady_mx/Ed7YtlDTAwJAmwHYNJ3cY1IBbbDBGBktFQmrpbZlSK2zfQ?e=jmopwf)
+[Archivo Word](https://alumnosuady-my.sharepoint.com/:w:/g/personal/a20215708_alumnos_uady_mx/Ed7YtlDTAwJAmwHYNJ3cY1IBbbDBGBktFQmrpbZlSK2zfQ?e=jmopwf).,.
